--- a/sketch.css
+++ b/sketch.css
@@ -8,10 +8,6 @@
 }
 
 .grid{
-    /*Dividing container div height and width by 16
-    for each grids height and width */
-    width: calc(100vw / 16);
-    height: calc(100vh / 16);
     background-color:violet;
     border: 1px solid black;
     
@@ -19,4 +15,20 @@
 
 .hovered{
     background-color: green;
+}
+
+#btn{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
 }
